--- a/views/sharks.html
+++ b/views/sharks.html
@@ -30,7 +30,7 @@
       </div>
    </nav>
    <div class="jumbotron text-center">
-      <h1>Shark Info</h1>
+      <h1>Shark Information</h1>
    </div>
    <div class="container">
       <div class="row">
