--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
       <div class="jumbotron">
          <div class="container">
             <h1>Wanna MASTER About Sharks???</h1>
-            <p>Are U Ready to learn about the sharks???</p>
+            <p>BLUE DEPLOYMENT</p>
             <br>
             <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a></p>
          </div>
