--- a/views/index.html
+++ b/views/index.html
@@ -41,7 +41,7 @@
       <div class="container">
          <div class="row">
             <div class="col-md-6">
-               <h3>Not all sharks are alike</h3>
+               <h3>Not all THE sharks are alike</h3>
                <p>Though some are dangerous, sharks generally do not attack humans. Out of the 500 species known to researchers, only 30 have been known to attack humans.</p>
             </div>
             <div class="col-md-6">
