--- a/views/index.html
+++ b/views/index.html
@@ -32,7 +32,7 @@
       </nav>
       <div class="jumbotron">
          <div class="container">
-            <h1>WANNA MASTER ABOUT SHARKS??????</h1>
+            <h1>WANNA MASTER ABOUT SHARKS???</h1>
             <p> BLUE DEPLOYMENT ------------ EAST ASIA </p>
             <br>
             <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a></p>
