--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -19,7 +19,7 @@ p {
 }
 
 .jumbotron {
-    background: #0df85be3; ### upper-bgd
+    background: #0df85be3; ### upper
     color: white;
     text-align: center;
 }
