--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>Sharks</title>
+      <title>CLoud Computing</title>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -20,7 +20,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" href="#">Cloud Computing</a>
+               <a class="navbar-brand" href="#">Cloud Computing - Group Project</a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                <ul class="nav navbar-nav mr-auto">
@@ -32,7 +32,7 @@
       </nav>
       <div class="jumbotron">
          <div class="container">
-            <h1>CLoud Avengers</h1>
+            <h1>CLoud Avengers - Team</h1>
             <p> --------- EAST ASIA --------------</p>
             <br>
             <p><a class="btn btn-primary btn-lg" href="/sharks" role="button">Get Shark Info</a></p>
@@ -41,7 +41,7 @@
       <div class="container">
          <div class="row">
             <div class="col-md-6">
-               <h3>Not all sharks are alike</h3>
+               <h3>Services Used</h3>
                <p>Though some are dangerous, sharks generally do not attack humans. Out of the 500 species known to researchers, only 30 have been known to attack humans.</p>
             </div>
             <div class="col-md-6">
